examples/type_system/failing/73_hm_index_non_int_compile_mismatch.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 1 error • examples/type_system/failing/73_hm_index_non_int_compile_mismatch.flx
// error[E300]: Type Mismatch
//
// I found a type mismatch.
//
//   examples/type_system/failing/73_hm_index_non_int_compile_mismatch.flx:29:8
//    |
// 29 |     xs["0"]
//    |        ^^^
//    |        --- this expression has type `String`
//
//    |        --- index expression is known at compile time
//
// Note:
//   expected type: Int
//   found type: String
//
// Help:
//   These two types are not compatible.
//   use an Int index for Array/List/Tuple access
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E300

fn take(xs: List<Int>) -> Option<Int> {
    xs["0"]
}

fn main() -> Unit with IO {
    print(to_string(take([1, 2, 3])))
}
